// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Items align bottom 1`] = `
<div
  className="align-bottom"
  style={
    Object {
      "gridTemplateColumns": "none",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Items align center 1`] = `
<div
  className="align-center"
  style={
    Object {
      "gridTemplateColumns": "none",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Items align stretch 1`] = `
<div
  className="align-stretch"
  style={
    Object {
      "gridTemplateColumns": "none",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Items align top 1`] = `
<div
  className="align-top"
  style={
    Object {
      "gridTemplateColumns": "none",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Items default 1`] = `
<div
  className="align-top"
  style={
    Object {
      "gridTemplateColumns": "none",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Items inline 1`] = `
<div
  className="align-top inline"
  style={
    Object {
      "gridTemplateColumns": "none",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Items template 1`] = `
<div
  className="align-top"
  style={
    Object {
      "gridTemplateColumns": "3fr 1fr 3fr",
    }
  }
>
  <div />
  <div />
  <div />
</div>
`;
